--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@ button:hover {
 }
 .photo-grid img {
     width: 100%;
-    max-height: 600px;
+    max-height: 300px;
     height: auto;
     display: block;
 }
@@ -169,4 +169,118 @@ button:hover {
     .nav-tabs ul {
         flex-direction: column;
     }
+}
+
+.carousel {
+    display: flex;
+    overflow-x: scroll;
+    scroll-snap-type: x mandatory;
+    -webkit-overflow-scrolling: touch;
+    margin: 20px;
+}
+
+.carousel-slide {
+    flex: 0 0 auto;
+    scroll-snap-align: start;
+    padding: 1rem;
+    width: 300px; /* Ajustez la largeur selon vos besoins */
+    text-align: center;
+}
+
+.carousel-slide img {
+    width: 100%;
+    border-radius: 8px;
+    margin-bottom: 10px;
+}
+
+.carousel-slide h3 {
+    margin-top: 0.5rem;
+    font-size: 1.5rem;
+}
+
+.carousel-slide p {
+    font-size: 1rem;
+}
+
+.container {
+    width: 50%;
+    margin: 0 auto;
+    background-color: #fff;
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    margin-top: 50px;
+}
+
+h2 {
+    text-align: center;
+    color: #333;
+}
+
+.form-group {
+    margin-bottom: 15px;
+}
+
+label {
+    display: block;
+    margin-bottom: 5px;
+    color: #555;
+}
+
+input[type="text"],
+select,
+textarea {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+textarea {
+    resize: vertical;
+}
+
+.button-group {
+    text-align: center;
+}
+
+#submitReview {
+    padding: 10px 20px;
+    background-color: #5cb85c;
+    border: none;
+    border-radius: 4px;
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+#submitReview:hover {
+    background-color: #4cae4c;
+}
+
+#reviewsContainer {
+    margin-top: 30px;
+}
+
+#reviewsList {
+    list-style-type: none;
+    padding: 0;
+}
+
+.review {
+    background-color: #f9f9f9;
+    padding: 10px;
+    border: 1px solid #ddd;
+    margin-bottom: 10px;
+    border-radius: 4px;
+}
+
+.review h3 {
+    margin: 0;
+    margin-bottom: 5px;
+}
+
+.review p {
+    margin: 0;
 }
