--- a/CSS/stylecontact.css
+++ b/CSS/stylecontact.css
@@ -11,6 +11,7 @@ body {
     height: max-content;
     font-family: var(--Roboto);
 }
+
 h2 {
     text-align: center;
     font-size: 1.5rem;
@@ -19,35 +20,7 @@ h2 {
         text-align: center;
         color: #333;
     
-}
-
-/*  Style bandeau de présentation du site */
-
-.bandeaucontact {
-    background-color: #f8f8f8;
-    padding: 5px;
-    text-align: center;
-    font-size: 1rem;
-    border-bottom: 1px solid #ddd;
-    height : 20px;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 1000;
-}
-
-.headband {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0px;
-    background-image: url('Assets/zoo.jpg');
-    background-size: cover;
-    background-position: center;
-    position: relative;
-    height: 600px;
-    }
+}   
 
 .bandeau::after {
     content: '';
@@ -71,21 +44,6 @@ h2 {
     font-size: 4rem; 
     margin: 0;
     z-index: 1;
-}
-
-button {
-    background-color: #5cb85c;
-    color: white;
-    border: none;
-    padding: 0px 5px;
-    cursor: pointer;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-}
-
-button:hover {
-    background-color: #4cae4c;
-    text-decoration: underline;
 }
 
 /*  Style menu de navigation */
@@ -124,90 +82,6 @@ button:hover {
     color: black;
 }
 
-/*  Styles des habitats du zoo */
-
-.photo-grid {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 10px;
-    margin: 20px;
-}
-.photo-grid a {
-    display: block;
-    border: 2px solid #ddd;
-    border-radius: 10px;
-    overflow: hidden;
-    transition: transform 0.2s ease;
-}
-.photo-grid a:hover {
-    transform: scale(1.05);
-    border-color: #aaa;
-}
-.photo-grid img {
-    width: 100%;
-    max-height: 450px;
-    height: auto;
-    display: block;
-}
-
-.titre-photo {
-    text-align: center; 
-    margin-bottom: 5px; 
-    font-size: medium;
-    color: #333; /
-    font-weight: bold; 
-    text-decoration: none; 
-    display: block; 
-}
-
-.introduction {
-    margin: 20px;
-    text-align: justify;
-}
-
-@media only screen and (max-width: 768px) {
-    .nav-tabs ul {
-        flex-direction: column;
-    }
-}
-
-/*  Style du carousel */
-
-.carousel {
-    display: flex;
-    overflow-x: scroll;
-    scroll-snap-type: x mandatory;
-    -webkit-overflow-scrolling: touch;
-    margin: 20px;
-}
-
-.carousel-slide {
-    flex: 0 0 auto;
-    scroll-snap-align: start;
-    padding: 1rem;
-    width: 600px; 
-    text-align: center;
-}
-
-.carousel-slide img {
-    width: 100%;
-    height: 400px; 
-    object-fit: cover;
-    width: 100%;
-    border-radius: 8px;
-    margin-bottom: 10px;
-}
-
-.carousel-slide h3 {
-    margin-top: 0.5rem;
-    font-size: 1.5rem;
-}
-
-.carousel-slide p {
-    font-size: 1rem;
-}
-
-/* Style formulaire de contact */
 
 .container {
     width: 50%;
@@ -217,6 +91,11 @@ button:hover {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
     margin-top: 50px;
+}
+
+h1, h2 {
+    text-align: center;
+    color: #333;
 }
 
 .form-group {
@@ -229,7 +108,10 @@ label {
     color: #555;
 }
 
+/*Style des champs de formulaire*/
+
 input[type="text"],
+input[type="email"],
 select,
 textarea {
     width: 100%;
@@ -247,7 +129,8 @@ textarea {
     text-align: center;
 }
 
-#submitReview {
+#submitReview,
+#submitContact {
     padding: 10px 20px;
     background-color: #5cb85c;
     border: none;
@@ -257,7 +140,8 @@ textarea {
     cursor: pointer;
 }
 
-#submitReview:hover {
+#submitReview:hover,
+#submitContact:hover {
     background-color: #4cae4c;
 }
 
