--- a/style.css
+++ b/style.css
@@ -154,8 +154,8 @@ button:hover {
     text-align: center; 
     margin-bottom: 5px; 
     font-size: medium;
-    color: #333; /
-    font-weight: bold; 
+    color: #333; 
+    font-weight : bold; 
     text-decoration: none; 
     display: block; 
 }
